# CRISPRCasTyper

./: .gitignore  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py
cctyper/: blast.py  castyping.py  controller.py  crisprcas.py  gff.py  hmmer.py  minced.py  plot.py  prodigal.py  repeat.py  resources.py  xgb.py
cctyper/data/: xgb_repeats.ubj
